# mandelbrotJS

./: .gitignore  MandelMaths.js  MandelbrotCanvasElement.js  MandelbrotExplorerElement.js  MandelbrotExplorerStatusbar.js  OrbitPointsOverlay.js  README.md  Settings.js  SidebarSection.js  SpecialPointsOverlay.js  ZoomPreviewElement.js  build.bat  build.py  global.d.ts  index.html  jsconfig.json  script.js  server-py.bat  server.py
docs/: idk.tex  idk_2.tex
explorer/: FractalCanvas.js  FractalExplorer.js  FractalExplorerStatusbar.js  FractalViewport.js  FractalZoomPreview.js  README.md
explorer/renderer/: FractalColorizer.js  FractalRenderer.js  FractalRendererMemory.js  FractalRendererWorker.js  MultithreadedFractalRenderer.js  worker.js
explorer/renderer/moduleWorkerWorkaround/: ModuleLoader.js  ModuleWorkerWorkaround.js  worker.js
formulas/: Buffalo.js  BurningShip.js  Mandelbar.js  Mandelbrot.js  MoebiusMandelbrot.js  PerpendicularBurningShip.js
minibrots/: SymbolicMandelMaths.js  WebGLMinibrotRenderer.js  index.html  script.js  styles.css
minibrots/laminations/: index.html  script.js
rust/: build.bat  index.html  script.js
rust/idk/: Cargo.toml
rust/idk/src/: complex.rs  lib.rs  main.rs
rust/test/: Cargo.toml
rust/test/src/: lib.rs
tools/: OrbitPointsOverlay.js  Overlay.js  SpecialPointsOverlay.js
util/: FixedRatioContainer.js  README.md  ResizeDiv.js  ScrollDiv.js  SidebarElement.js  Timer.js  Utils.js  styles.css
