[package]
name = "idk"
version = "0.1.0"
authors = ["Ben Eltschig <b.eltschig@protonmail.com>"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

# [features]
# default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
structopt = "0.3.13"
strum = { version = "0.21", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1"